--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "dotenv": "^16.5.0",
     "embla-carousel-react": "8.5.1",
     "eventemitter3": "latest",
+    "framer-motion": "^12.19.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "mongodb": "^6.17.0",
