--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
     "@tanstack/react-query": "latest",
+    "@vercel/analytics": "^1.5.0",
+    "@vercel/blob": "^1.1.1",
     "@wagmi/core": "latest",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
@@ -67,13 +69,14 @@
     "react-day-picker": "^9.5.6",
     "react-dom": "^19",
     "react-hook-form": "^7.54.1",
+    "react-icons": "^5.5.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
-    "viem": "latest",
+    "viem": "^2.31.4",
     "wagmi": "latest",
     "zod": "^3.24.1"
   },
