switched from dynamic to embedded wallet and changed design

--- a/package.json
+++ b/package.json
@@ -9,19 +9,16 @@
     "dev": "next dev",
     "lint": "next lint",
     "start": "next start",
-    "test:build": "npm run build:production && npm run start"
+    "test:build": "npm run build:production && npm run start",
+    "type-check": "tsc --noEmit",
+    "check": "npm run lint && npm run type-check"
   },
   "dependencies": {
+    "@coinbase/cdp-core": "^0.0.33",
+    "@coinbase/cdp-hooks": "^0.0.33",
+    "@coinbase/cdp-react": "^0.0.33",
+    "@coinbase/cdp-sdk": "^1.38.0",
     "@coinbase/onchainkit": "^0.38.17",
-    "@dynamic-labs/assert-package-version": "latest",
-    "@dynamic-labs/ethereum": "latest",
-    "@dynamic-labs/ethereum-core": "latest",
-    "@dynamic-labs/logger": "latest",
-    "@dynamic-labs/rpc-providers": "latest",
-    "@dynamic-labs/sdk-react-core": "latest",
-    "@dynamic-labs/types": "latest",
-    "@dynamic-labs/wagmi-connector": "latest",
-    "@dynamic-labs/wallet-connector-core": "latest",
     "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
@@ -88,6 +85,8 @@
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "eslint": "^9.36.0",
+    "eslint-config-next": "^15.5.4",
     "postcss": "^8.5",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
