--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "@coinbase/cdp-core": "^0.0.33",
     "@coinbase/cdp-hooks": "^0.0.33",
     "@coinbase/cdp-react": "^0.0.33",
-    "@coinbase/cdp-sdk": "^1.38.0",
+    "@coinbase/cdp-sdk": "^1.38.5",
     "@coinbase/onchainkit": "^0.38.17",
+    "@coinbase/x402": "^0.6.6",
     "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
@@ -79,6 +80,8 @@
     "vaul": "^1.1.2",
     "viem": "^2.31.4",
     "wagmi": "latest",
+    "x402": "^0.6.6",
+    "x402-fetch": "^0.6.6",
     "zod": "^3.24.1"
   },
   "devDependencies": {
